--- a/WebForum.Api/Properties/launchSettings.json
+++ b/WebForum.Api/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5091/openapi/v1.json",
+      "launchUrl": "http://localhost:5091/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
