--- a/WebForum.Infrastructure/WebForum.Infrastructure.csproj
+++ b/WebForum.Infrastructure/WebForum.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Context\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
