--- a/WebForum.Application/WebForum.Application.csproj
+++ b/WebForum.Application/WebForum.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WebForum.Domain\WebForum.Domain.csproj" />
     <ProjectReference Include="..\WebForum.Infrastructure\WebForum.Infrastructure.csproj" />
   </ItemGroup>
