Added User authentication and most of the Post logic

--- a/WebForum.Api/appsettings.Development.json
+++ b/WebForum.Api/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=Data/WebForumDatabase.db"
+    },
+    "JwtSettings": {
+        "Audience": "WebForumAudience",
+        "ExpirationMinutes": "60",
+        "Issuer": "WebForumIssuer",
+        "SecretKey": "l4kasn4fsd44u2h76bf7iblsdbbdo;ihsdfl^oksdnfos_dakfns-odfnosl_djnfsdokljsdbflksd"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
