--- a/WebForum.Api/appsettings.json
+++ b/WebForum.Api/appsettings.json
@@ -1,12 +1,9 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=Data/WebForumDatabase.db"
-    },
+    "AllowedHosts": "*",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
-    },
-    "AllowedHosts": "*"
+    }
 }
